src/yini_test/cases/golden/lenient/invalid/numbers/hex-with-hash-prefix.yini
@yini

^ Numbers
palette = { primary: #FF0000 }  // INVALID since RC 6.
